# Candle

./: .gitignore  CMakeLists.txt  Makefile  SCHEDULE.md  _pack_debug.c  candlec.exe.old  candlec.exp  candlec.lib  candlec_nogc.exp  candlec_nogc.lib  gc_patch.txt  keywords.txt  lib.candle  main.candle  out.c  parser.c  push.bat  readme.md  standard.md
LangThinkof/: grammar.class.template  grammar.load.template  keywords
build_check/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  candle.sln  candle_runtime.vcxproj  candle_runtime.vcxproj.filters  candlec.vcxproj  candlec.vcxproj.filters  cmake_install.cmake
build_check/Release/: candle_runtime.lib  candlec.exp
build_check/candle_runtime.dir/Release/: candle_runtime.lib.recipe
build_check/candle_runtime.dir/Release/candle_runtime.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_check/candlec.dir/Release/: candlec.exe.recipe
build_check/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_clang/: CMakeCache.txt
build_clang2/: CMakeCache.txt
build_cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
build_ninja/: CMakeCache.txt
grammar/: candle.peg  tokens.md
grammar/examples/: basic.candle  class.candle  class_test.candle  control.candle  fn_test.candle  hello.candle  inherit_test.candle  loop_test.candle  module.candle  parallel.candle  reflect_test.candle  vendor.candle  vendor_json.candle
grammar/keywords/: Function_k.candle  alias_k.candle  assert_k.candle  bool_k.candle  break_k.candle  catch_k.candle  class_k.candle  const_k.candle  delay_k.candle  dll_k.candle  ellipsis_k.candle  else_k.candle  export_k.candle  factory_k.candle  false_k.candle  final_k.candle  for_k.candle  if_k.candle  inherit_k.candle  iter_k.candle  load_k.candle  null_k.candle  parallel_k.candle  private_k.candle  public_k.candle  reflect_k.candle  return_k.candle  section_k.candle  signal_k.candle  static_k.candle  super_k.candle  this_k.candle  throw_k.candle  true_k.candle  try_k.candle  void_k.candle  when_k.candle
grammar/keywords/ffi_demo/: candle_demo.c
memory/: JOURNAL.jsonl
src/: ast.c  ast.h  candle_runtime.h  codegen.c  codegen.h  interp.c  interp.h  interp_auto_mods_run.txt  lexer.c  lexer.h  main.c  parser.c  parser.h  sema.c  sema.h  threading.c  threading.h  token.c  token.h  util.c  util.h  value.c  value.h
src/builtins/: builtins.c  builtins.h  collections.c  crypto.c  datetime.c  enc.c  encoding.c  ffi.c  ffi.h  ffi_mem.c  ffi_mem.h  file.c  fs.c  gui.c  gui.h  http.c  http.h  modules.c  modules.h  modules_extern.h  modules_extern.inl  path.c  pointer.h  process.c  random.c  time.c
src/data/: json.h
src/network/: http.h
src/plugins/: audio.h
src/std/: _builtins_aot.h  _builtins_aot_runtime.c  collections.h  crypto.h  datetime.h  encoding.h  ffi.h  file.h  fs.h  gui.h  gui_runtime.c  http.h  io.h  json.h  math.h  path.h  process.h  random.h  time.h
test/: _alias.candle  _alias_verify.candle  _aot_basic.c  _auto_test.candle  _bench_min.candle  _bench_nottime.candle  _bench_seq.candle  _bench_seq2.candle  _cg_test.candle  _dbg.candle  _file_test.candle  _for_expr.candle  _ftmp.txt  _lam1.candle  _load_local.candle  _map_test.candle  _newmods.candle  _par_break.candle  _par_debug.candle  _par_div.candle  _par_expr.candle  _par_func.candle  _par_isprime.candle  _par_mod.candle  _par_mod2.candle  _par_nested.candle  _par_prime.candle  _par_sec.candle  _par_time_func.candle  _par_time_simple.candle  _tmp_assert.candle  aot_load_test.candle  ctor_test.candle  generic_test.candle  http_test.candle  json_test.candle  private_test.candle  run_tests.py  run_tests_patch.txt  stdlib_test_v2.candle  (+3 more)
test/annotations/: annotation_test.candle  annotation_test.candle_pack.c
test/aot/: aot_parallel.c  aot_parallel.candle  aot_simple.c  aot_simple.candle  aot_speedup.candle
test/builtins/: builtins_test.candle
test/byte/: byte_test.candle
test/cli/: cli_test.candle  cli_test_ast.txt  cli_test_emit_c.txt  cli_test_help.txt  cli_test_run.txt  cli_test_tokens.txt
test/compile_test_all/: class_demo.candle  compile_all.candle  control_flow.candle  http_debug.candle  lambda_demo.candle  main.candle  main_aot.candle  main_gen.c  math_utils.candle  mod_add.candle  parallel_demo.candle  types_demo.candle
test/complex/: complex_test.candle  math_mod.candle  math_user.candle
test/dll/: win32_gui.candle  win32_test.candle
test/double/: double_builtin_test.candle  double_test.candle
test/encoding/: encoding_test.candle  file_encoding_test.candle  temp_ascii.txt  temp_test.txt
test/ffi/: double_return_test.candle  ffi_mem_test.candle
test/fs/: 1.candle  1.candle_pack.c  _ascii.txt  _debug.candle  _debug2.candle  _debug3.candle  fs_simple.candle  fs_test.candle
test/gui/: candle_paint_gui.candle
test/isa/: isa_class.candle  isa_classref.candle  isa_test.candle
test/iterable/: iterable_test.candle
test/json_pure/: json_pure_test.candle  mini.candle
test/lambda/: lambda_aot.candle  lambda_test.candle
test/map/: map_test.candle
test/multi_module/: main.candle  main2.candle  main2_simple.candle  math_utils.candle  noexport_utils.candle  shapes.candle  string_utils.candle  wild_utils.candle
test/my_test/: 1.candle
test/object/: full_test.candle  obj_basic.candle  obj_explicit.candle  obj_string.candle  obj_trivial.candle  object_debug.candle  object_minimal.candle  object_test.candle  to_string_test.candle
test/pack/: _pack_test.txt  pack_test.candle  small.candle
test/parallel/: parallel_order.c  parallel_order.candle
test/parallel_bench/: parallel_bench.candle
test/pointer/: pointer_test.candle
test/sb/: sb_test.candle
test/stdlib_verify/: Bool.candle  Int.candle  List.candle  Map.candle  String.candle  main.candle  stdlib_test.candle
test/test_all/: test_all.c  test_all.candle
test/time/: time_test.candle
test/tuple/: tuple_test.candle
test/uint8list/: uint8list_test.candle
(+13 files in other folders)
